add two separate DTO read and write models, extract category enum
